# ChangeLog for app-emulation/kvm
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/kvm/ChangeLog,v 1.39 2009/09/21 14:57:21 dang Exp $

  29 Oct 2009; Peter Hjalmarsson <xake@gentoo.org> -files/kvm-83-vtd.patch,
  kvm-88-r1.ebuild, -files/kvm-88-link-with-cflags.patch:
  Use sed instead of patch, and cleanup

  09 Oct 2009; Peter Hjalmarsson <xake@gentoo.org> kvm-88-r1.ebuild:
  Also filter stack-protector

  02 Oct 2009; Peter Hjalmarsson <xake@gentoo.org>
  files/kvm-88-link-with-cflags.patch:
  Update patch to catch some more missing CFLAGS, for you filter-flags
  pleasure

  29 Sep 2009; Peter Hjalmarsson <xake@gentoo.org> +files/kvm-83-vtd.patch,
  +kvm-88-r1.ebuild, +files/kvm-88-link-with-cflags.patch, +metadata.xml:
  Patch to make filter-flags work with kvm, and sanitize the ebuilds broken
  play with specs.

  21 Sep 2009; Daniel Gryniewicz <dang@gentoo.org> metadata.xml:
  Remove myself as maintainer

  27 Jul 2009; Daniel Gryniewicz <dang@gentoo.org> kvm-88-r1.ebuild:
  Need ~ dep for kvm-kmod, to handle -r bumps

*kvm-88-r1 (25 Jul 2009)

  25 Jul 2009; Daniel Gryniewicz <dang@gentoo.org> -kvm-81.ebuild,
  -kvm-82.ebuild, -kvm-83.ebuild, -kvm-85-r1.ebuild, +kvm-88-r1.ebuild:
  Bump to kvm-88-r1
  - Fix hard-coded share path; bug #279013
  - Fix build with esd/pulse; bug #278652

*kvm-88 (21 Jul 2009)

  21 Jul 2009; Daniel Gryniewicz <dang@gentoo.org> +kvm-88.ebuild:
  Bump to kvm-88

*kvm-85-r2 (14 May 2009)

  14 May 2009; Daniel Gryniewicz <dang@gentoo.org> +kvm-85-r2.ebuild:
  - Remove test use flag; tests are restricted. bug #246441
  - Fix automagic dep on bluez. bug #261978
  - Add dep on pciutils. bug #267799
  - Fix disabling of stripped binaries. bug #268237
  - Fix help string breaking libvirt. bug #269014

  28 Apr 2009; Daniel Gryniewicz <dang@gentoo.org> kvm-85-r1:
  Need linux-info for the kernel version checks

*kvm-85-r1 (28 Apr 2009)
