@@ -1,5 +1,6 @@
 DIST kvm-patches-20090725.tar.gz 2466 RMD160 9497217f8b1e3e8165b2643965a6ece3f4301ec3 SHA1 85cf2fcc21dd598d8a2dfce081c75f2d0feb1ef1 SHA256 98199d6b7d5e9c3211a8abd2ecb87715c1e0260b683a07b356331a6bb08b94f1
 DIST qemu-kvm-devel-88.tar.gz 4364002 RMD160 654683522dc670fc8743e415b8f5b2cb32bed092 SHA1 4ad9af298d3d6ae25e3c5f6b1cd9bb03a7ad8315 SHA256 d407fc0760684e812e72451661acd620c0ac44b896c8bc9d0cf83565dca1987d
 EBUILD kvm-88-r1.ebuild 5754 RMD160 c81525908ae348bbf1d698b173b19945aea595a2 SHA1 363f3e10864a2046a77fe3611e5946a62e5f17f0 SHA256 984e301a8703786c5de022d676c3faa94c253756d6b5346ba5fc261d26a3b1de
-MISC ChangeLog 10328 RMD160 e51878b98c8796ab91428ae2e6c8a0b9350109fa SHA1 e1f60f6d38cac19bf0bff5f077dfac5cac4f4d77 SHA256 0be75966af1617b85ceff9c0c2525071e06b36789584d9ba69abcc335b40bf3c
+EBUILD kvm-88-r2.ebuild 5868 RMD160 0ea9e486fe8fd7a76538e345728e2a0f340df876 SHA1 0a95a7d4d93d58210c512abee791c8aa835b11f7 SHA256 1a19302471b77abba8a0262b9402b4bc095db86cba9643d827c6d22c2b3f6497
+MISC ChangeLog 10388 RMD160 4e6d33ad3f2053fdc4768795e842699a9780e6ad SHA1 9d8d1f71e1b7da361139080618582343ff96fc2d SHA256 56bde3da65e6a6f8e83fc635136ab80c03931fa71231340dead4e3d3e3d92a31
 MISC metadata.xml 1187 RMD160 97dce7cc36dbcdd33a221e120d95c765b1192565 SHA1 c4208ab8d75f1526b40a71370359c2a04858be39 SHA256 a9cc4ee203ceca4d615b2548b9de21f85339d6621711bcc94dafc02232122b61
